# phangs_imaging_scripts

./: .gitignore  CITATION.cff  CITATION.md  CODEOWNERS  KNOWN_ISSUES.txt  LICENSE  MANIFEST.in  README.md  README.rst  README_for_delivery.txt  README_for_scripts.txt  README_for_v2.txt  README_for_v3.txt  SCIENCE_GOAL_KEY.txt  alignMask.py  auExtensions.py  baseline_stats.txt  bkupImage1mm.py  build_cubes.pro  build_products.pro  build_products_12m.pro  build_products_7m.pro  build_release.old  build_release.pro  build_release_v0p5.pro  build_release_v0p6.pro  build_release_v3.pro  calcTargetBeams.py  calibrate_data.py  callClean.py  casaversion_key.txt  check_noise_spectra.pro  check_status.pro  clean_mask_scripts.pro  clean_masks.txt  coadd_ngc6744.pro  combineCalibrated.py  compare_release.pro  dir_key.txt  example_make_products.py  (+179 more)
.github/: dependabot.yml
.github/workflows/: build.yaml  publish.yaml
archived/: build_release_v0p6.pro  make_clean_masks.py  start_project.py
archived/custom_staging_scripts/: ngc1792_2_staging_script.py
custom_staging_scripts/: ngc1792_1_staging_script.py  ngc1792_2_staging_script.py  ngc5128_staging_script.py
data_files/: dir_key.txt  mosaic_definitions.txt  ms_file_key.txt  override_imaging_params.txt
idl_scripts/: Note.md  README.md  build_cubes.pro  build_products_12m.pro  compare_parts_to_mosaic.pro  inspect_clean_masks_v4.pro  inspect_residuals.pro  make_clean_masks.pro  make_clean_masks_v4.pro
key_templates/: cleanmask_key.txt  config_definitions.txt  cube_mosaic.clean  derived_key.txt  dir_key.txt  imaging_recipes.txt  linearmosaic_definitions.txt  master_key.txt  moment_key.txt  ms_file_key.txt  overrides.txt  singledish_key.txt  target_definitions.txt
old_phangsalma_keys/: config_definitions.txt  imaging_recipes.txt
orig_flags/: uid___A002_Xaf4574_X17bc_flagtemplate.txt  uid___A002_Xaf5c32_X6d2_flagtemplate.txt  uid___A002_Xaf9ce7_X3877_flagtemplate.txt  uid___A002_Xaf9ce7_X4397_flagtemplate.txt  uid___A002_Xafb2c8_X7fa_flagtemplate.txt  uid___A002_Xb12f3b_X9ec2_flagtemplate.txt  uid___A002_Xb12f3b_Xc5fb_flagtemplate.txt  uid___A002_Xb148a2_X463e_flagtemplate.txt  uid___A002_Xb1ad4d_X64ff_flagtemplate.txt  uid___A002_Xb21481_Xc714_flagtemplate.txt  uid___A002_Xb25e1a_X12173_flagtemplate.txt  uid___A002_Xb25e1a_X9558_flagtemplate.txt  uid___A002_Xb28642_X221e_flagtemplate.txt  uid___A002_Xb2f730_Xcff7_flagtemplate.txt  uid___A002_Xb35321_X173c_flagtemplate.txt  uid___A002_Xb36550_Xf4e_flagtemplate.txt  uid___A002_Xb59e4a_X1e6_flagtemplate.txt  uid___A002_Xb5bd46_X5d63_flagtemplate.txt  uid___A002_Xb5f503_X1556_flagtemplate.txt  uid___A002_Xb62a5b_X4e24_flagtemplate.txt  uid___A002_Xb6543e_X3bd_flagtemplate.txt  uid___A002_Xb66472_X1078_flagtemplate.txt  uid___A002_Xb6c583_X41a8_flagtemplate.txt  uid___A002_Xb6d0c2_X39ef_flagtemplate.txt  uid___A002_Xb6d0c2_Xa1b8_flagtemplate.txt  uid___A002_Xb6e98e_X6390_flagtemplate.txt  uid___A002_Xb6f491_X2ab1_flagtemplate.txt  uid___A002_Xb6fb6f_X2fc7_flagtemplate.txt  uid___A002_Xb77b17_X4879_flagtemplate.txt  uid___A002_Xb7a3f8_X2e50_flagtemplate.txt  uid___A002_Xb7d0ee_X57dc_flagtemplate.txt  uid___A002_Xb7d0ee_X9394_flagtemplate.txt  uid___A002_Xc53e4e_X2579.flagtemplate.txt  uid___A002_Xc53e4e_X2fd7.flagtemplate.txt  uid___A002_Xc53e4e_X3cbc.flagtemplate.txt  uid___A002_Xc53e4e_X5364.flagtemplate.txt  uid___A002_Xc53e4e_X610c.flagtemplate.txt  uid___A002_Xc53e4e_X690c.flagtemplate.txt  uid___A002_Xc5537d_X1ac9.flagtemplate.txt  uid___A002_Xc5537d_X2694.flagtemplate.txt  (+75 more)
phangs-alma_keys/: cleanmask_key.txt  config_definitions.txt  continuum_mosaic_ngc5236.clean  cube_mosaic.clean  cube_mosaic_ngc5236.clean  derived_key.txt  dir_key.txt  distance_key.txt  imaging_recipes.txt  imaging_recipes_ngc5236.txt  linearmosaic_definitions.txt  master_key.txt  master_key_ngc5236.txt  moment_key.txt  ms_file_key.txt  overrides.txt  singledish_key.txt  target_definitions.txt  window_key.txt
phangsPipeline/: PHANGSPipelineREADME.md  __init__.py  _astropy_init.py  calctimeonsource.py  casaBlankCleanRecipes.py  casaCubeRoutines.py  casaFeatherRoutines.py  casaImagingRoutines.py  casaLegacySingleDishRoutines.py  casaMaskingRoutines.py  casaMosaicRoutines.py  casaRoutineTests.py  casaSingleDishALMAWrapper.py  casaSingleDishRoutines.py  casaStuff.py  casaVisRoutines.py  casa_check.py  clean_call.py  conftest.py  ftplane_convolution.py  handlerAlmaDownload.py  handlerDerivatives.py  handlerDerived.py  handlerDerviatives.py  handlerImaging.py  handlerImagingChunked.py  handlerKeys.py  handlerPostprocess.py  handlerProducts.py  handlerRelease.py  handlerSingleDish.py  handlerTemplate.py  handlerTestImaging.py  handlerVis.py  handlerVisOld.py  imagingHandler.py  imagingPipeline.py  keyHandler.py  line_list.py  phangsCubePipeline.py  (+35 more)
phangsPipelineTests/: __init__.py  test_casaCubeRoutines.py  test_casaFeatherRoutines.py  test_handlerChunkedImaging.py  test_handlerImaging.py  test_handlerKeys.py  test_handlerVis.py  test_pipelineLogger.py  test_utilsFieldSelection.py  test_utilsTestImagingPlots.py
phangs_imaging_pipeline/: __init__.py  casaImagingRoutines.py  casaStuff.py  handlerPostprocess.py  statsHandler.py
phangsalma_key_templates/: config_definitions.txt  dir_key.txt  ms_file_key.txt
phangsalma_keys/: cleanmask_key.txt  config_definitions.txt  cube_mosaic_multiscale.clean  dir_key.txt  imaging_recipes.txt  linearmosaic_definitions.txt  master_key.txt  ms_file_key.txt  overrides.txt  singledish_key.txt  target_definitions.txt
phangsalma_scratch/: inspect_singledish.pro  phangs_sample_table_v1p2.fits  process_singledish.pro  process_singledish.py
scripts/: blank_clean_recipes.py  calctimeonsource.py  example_make_products.py  run_casa_test_imaging_example.py
test_keys/: cleanmask_key.txt  distance_key.txt  master_key.txt  ms_file_key.txt  overrides.txt  singledish_key.txt
test_scripts/: test_handlerPostprocess.py  test_handlerRelease.py  test_postprocess.py  unittest_handlerImaging.py  unittest_handlerKeys.py  unittest_handlerProductCreation.py  unittest_utilsResolutions.py
(+58 files in other folders)
