[metadata]
name = phangsPipeline
author = PHANGS Collaboration
author_email = leroy.42@osu.edu
license = MIT
license_file = LICENSE.rst
url = https://github.com/akleroy/phangs_imaging_scripts
description = A CASA pipeline to process and image calibrated radio interferometry data.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = akleroy/phangs_imaging_scripts

[options]
zip_safe = False
packages = find:
setup_requires = setuptools_scm
install_requires =
    scipy
    matplotlib
    spectral_cube
    casatools>=6.4
    casatasks>=6.4
    casaplotms
    casaviewer
    almatasks
    casampi
    casashell
    casadata
    casampi
    casaplotserver

    # Keeping here as a not on how to handle casa 6.1-6.3
    # But astropy/spectral-cube will lack recent updates since python=3.6
    # support has been dropped.
    # scipy==1.5.2  # lock to py36 compatible version
    # matplotlib==3.3  # lock to py36 compatible version
    # spectral_cube==0.4.5  # lock to py36 compatible version


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
phangsPipeline = data/*

[tool:pytest]
testpaths = "phangsPipeline" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    phangsPipeline/_astropy_init*
    phangsPipeline/conftest.py
    phangsPipeline/*setup_package*
    phangsPipeline/tests/*
    phangsPipeline/*/tests/*
    phangsPipeline/extern/*
    phangsPipeline/version*
    */phangsPipeline/_astropy_init*
    */phangsPipeline/conftest.py
    */phangsPipeline/*setup_package*
    */phangsPipeline/tests/*
    */phangsPipeline/*/tests/*
    */phangsPipeline/extern/*
    */phangsPipeline/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
